Move all thread cache specific code to a new class

Part of
MDEV-18353 - Shutdown may miss to wait for connection thread